# Axolotl

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: layout.tsx  not-found.tsx
frontend/src/app/components/catalyst/: avatar.tsx  badge.tsx  button.tsx  dropdown.tsx  navbar.tsx  sidebar.tsx  table.tsx  text.tsx
frontend/src/app/layouts/catalyst/: auth.tsx  sidebar.tsx  stacked.tsx
frontend/src/app/login/: page.tsx
migrations/2025-05-25-215404_create_user/: up.sql
migrations/2025-05-26-013504_permissions/: down.sql  up.sql
src/: app.rs  main.rs  web.rs
src/auth/: backend.rs  basic_auth.rs  macros.rs  mod.rs  types.rs
src/db/: models.rs  schema.rs  types.rs
